// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WorkItemContentArea /> should render correctly when waiting on script 1`] = `
<Connect(ErrorBoundaryComponent)
  buttonConfig={
    Array [
      Object {
        "disabled": true,
        "id": "end-button",
        "onClick": [Function],
        "text": Object {
          "defaultMessage": "End",
          "id": "app.containers.WorkItemContentArea.end",
        },
        "title": Object {
          "defaultMessage": "mock message",
          "id": "mockId",
        },
        "type": "primaryRed",
      },
    ]
  }
  content={
    <div
      style={
        Array [
          Object {
            "height": "100%",
            "overflowY": "auto",
            "padding": "17px",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "border": "1px solid #FE4565",
          },
        ]
      }
    >
      <Memo(Connect(ErrorBoundaryComponent)) />
    </div>
  }
  details={<Memo(Connect(ErrorBoundaryComponent)) />}
  from="(No Subject)"
  interaction={
    Object {
      "channelType": "work-item",
      "contact": undefined,
      "customFields": Array [
        Object {
          "label": "label",
          "value": "value",
        },
      ],
      "interactionId": "mock-interaction-1",
      "script": Object {
        "something": "something",
      },
      "status": "work-accepted",
      "subject": undefined,
    }
  }
/>
`;

exports[`<WorkItemContentArea /> should render correctly with contact and subject 1`] = `
<Connect(ErrorBoundaryComponent)
  buttonConfig={
    Array [
      Object {
        "disabled": false,
        "id": "end-button",
        "onClick": [Function],
        "text": Object {
          "defaultMessage": "End",
          "id": "app.containers.WorkItemContentArea.end",
        },
        "title": "",
        "type": "primaryRed",
      },
    ]
  }
  content={
    <div
      style={
        Array [
          Object {
            "height": "100%",
            "overflowY": "auto",
            "padding": "17px",
            "position": "absolute",
            "width": "100%",
          },
          false,
        ]
      }
    >
      <Memo(Connect(ErrorBoundaryComponent)) />
    </div>
  }
  details={<Memo(Connect(ErrorBoundaryComponent)) />}
  from="Contact name - Test subject"
  interaction={
    Object {
      "channelType": "work-item",
      "contact": Object {
        "attributes": Object {
          "name": "Contact name",
        },
      },
      "customFields": Array [
        Object {
          "label": "label",
          "value": "value",
        },
      ],
      "interactionId": "mock-interaction-1",
      "script": Object {
        "something": "something",
      },
      "status": "work-accepted",
      "subject": "Test subject",
    }
  }
/>
`;

exports[`<WorkItemContentArea /> should render correctly with neither contact nor subject 1`] = `
<Connect(ErrorBoundaryComponent)
  buttonConfig={
    Array [
      Object {
        "disabled": false,
        "id": "end-button",
        "onClick": [Function],
        "text": Object {
          "defaultMessage": "End",
          "id": "app.containers.WorkItemContentArea.end",
        },
        "title": "",
        "type": "primaryRed",
      },
    ]
  }
  content={
    <div
      style={
        Array [
          Object {
            "height": "100%",
            "overflowY": "auto",
            "padding": "17px",
            "position": "absolute",
            "width": "100%",
          },
          false,
        ]
      }
    >
      <Memo(Connect(ErrorBoundaryComponent)) />
    </div>
  }
  details={<Memo(Connect(ErrorBoundaryComponent)) />}
  from="(No Subject)"
  interaction={
    Object {
      "channelType": "work-item",
      "contact": undefined,
      "customFields": Array [
        Object {
          "label": "label",
          "value": "value",
        },
      ],
      "interactionId": "mock-interaction-1",
      "script": Object {
        "something": "something",
      },
      "status": "work-accepted",
      "subject": undefined,
    }
  }
/>
`;
